MyFirstForceProject/src/objects/Target_Shirts__c.object
<CustomObject>
    <description>Shirts from Levi&apos;s sold by Target</description>
    <fields>
        <fullName>Final_price__c</fullName>
        <formula>Name__r.shirt_price__c - (Name__r.shirt_price__c* Shirts_discount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final_price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product_ID</label>
        <referenceTo>Levis_shirts__c</referenceTo>
        <relationshipLabel>Target_Shirts</relationshipLabel>
        <relationshipName>Target_Shirts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shirts_discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Shirts_discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Shirts_quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Shirts_quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Target Shirts</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Record_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Target Shirts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>